Drag & Drop and Add new item features added

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,5 +1,8 @@
 body {
   --green: #73eacc;
   --black: #313d42;
-  --grey: #F2F2F3;
+  --grey: #f2f2f3;
+  --dark-grey: #cecece;
+  --blue: #356eff;
+  --transparent-blue: #356eff50;
 }
