--- a/src/style/_general.scss
+++ b/src/style/_general.scss
@@ -13,11 +13,11 @@ h2 {
   color: var(--black);
 }
 
-.btn{
+.btn {
   cursor: pointer;
   border: none;
-  &:focus{
-    outline:none;
+  &:focus {
+    outline: none;
   }
 }
 
@@ -37,5 +37,5 @@ body {
 
 .title {
   font-size: 1.5rem;
-  margin-bottom: 0.5em;
+  margin: 0.5em 0;
 }
