--- a/src/style/components/_draggable-list.scss
+++ b/src/style/components/_draggable-list.scss
@@ -14,6 +14,7 @@
   .list-item,
   .list-placeholder,
   .list-input {
+    transition: 0.5s ease;
     padding: 0.5rem 0.8rem;
     border-radius: 0.2rem;
   }
@@ -24,7 +25,7 @@
     align-items: center;
     justify-content: space-between;
     background-color: var(--green);
-    transition: .3s ease;
+    transition: 0.3s ease;
     .delete-btn {
       background-color: transparent;
       display: flex;
@@ -40,7 +41,7 @@
   }
 
   .dragged-over {
-    filter: brightness(.8);
+    filter: brightness(0.8);
   }
 
   .input-wrapper {
@@ -59,7 +60,6 @@
     font-size: 1rem;
     cursor: pointer;
     background-color: var(--green);
-    transition: 0.5s ease;
     opacity: 0.4;
     &:focus {
       opacity: 1;
@@ -78,7 +78,7 @@
     background-color: white;
     color: var(--black);
     position: absolute;
-    top:2.4rem;
+    top: 2.4rem;
     border-bottom-left-radius: 0.2rem;
     border-bottom-right-radius: 0.2rem;
     border: 0.1rem solid var(--dark-grey);
